# yt2telegramRAG

./: .env.example  .gitignore  ANALYTICS_ENDPOINTS_FIX.md  CHANGELOG.md  COOKIES_FILE  COOKIES_FILE.example  CORE_API_IMPLEMENTATION_SUMMARY.md  DEBUG_RESULTS_SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  FINAL_TEST_RESULTS.md  GETTING_STARTED.md  IMPROVED_ERROR_HANDLING.md  LICENSE  MULTI_MODEL_QUICKSTART.md  MULTI_MODEL_SETUP.md  PROJECT_DOCUMENTATION.md  PROJECT_STATUS_FINAL.md  README.md  SUBTITLE_TEST_README.md  WORKSPACE_CLEANUP_SUMMARY.md  YT_DLP_SUBTITLE_DOWNLOADER_USAGE.md  add_channel_smart.py  analyze_aggregate.py  analyze_log.py  bot.py  clean_subtitles_IE1E9m5u488.json  clean_subtitles_IE1E9m5u488.txt  debug_db.py  debug_ytdlp.py  deprecated_version.py  minimal_server.py  process_single_video.py  pyproject.toml  requirements.txt  restart_server.py  rewrite.py  run.py  run_gui.py  (+11 more)
.kiro/settings/: mcp.json
channel_manager/: README.md  __init__.py  database.py  exceptions.py  glob.py  llm_summarizer.py  logging_config.py  main.py  subtitle_cleaner.py  telegram_bot.py  validators.py  youtube_client.py  youtube_dlp.py
channel_manager/channels/: example_channel.yml
channel_manager/prompts/: isaac_arthur_summary.md  robynhd_summary.md
channel_manager/qna/: DETAILED_DOCUMENTATION.md  __init__.py  config.py  database.py  requirements.txt
channels/: example_channel.yml
gui/: __init__.py  app.py  check_db_schema.py  config.py  fix_imports.py  main.py  requirements.txt  run_dev.py  run_full_dev.py  run_simple.py
gui/api/: __init__.py  router_registry.py  versioning.py
gui/config/: telegram_example.env
gui/core/: __init__.py  connection_pool.py  database_manager.py  message_queue_manager.py  middleware.py  (+1 more)
logs/: README.md
prompts/: tg_bot.yml  youtube2telegram.yml
tests/: TEST_SUMMARY.md  __init__.py  pytest.ini  run_comprehensive_tests.py  test_imports.py
yt2telegram/: __init__.py  config_finder.py  exceptions.py  main.py
(+113 files in other folders)
